# LogiAi-Backend

./: .gitignore  OPERATOR_EMAIL_FIX.md  README.md  SYSTEM_ARCHITECTURE.md  System_prompts.md  THREAD_ID_FLOW.md  config.py  generate_graph.py  generate_token.py  main.py  pyproject.toml
agent/: agent_node.py  state.py  workflow.py
agent/clients/: shipment_client.py
agent/nodes/: cancellation_node.py  complete_info_node.py  confirmation_node.py  context_builder_node.py  extraction_node.py  intent_node.py  language_node.py  missing_info_node.py  parse_node.py  pricing_node.py  reqid_generator_node.py  status_node.py
agent/tools/: cancellation_tools.py  confirmation_tools.py  db_tools.py  email_tools.py  extraction_tool.py  pricing_tools.py  spam_tools.py  status_tools.py
api/: auth_router.py  email_router.py  shipment_router.py  shipment_service.py
config/: constants.py  settings.py
core/: constants.py
db/: client.py
models/: auth.py  shipment.py
schemas/: auth_schema.py  extraction_schema.py  shipment_schema.py
services/: cancellation_service.py  email_sender.py  extraction_service.py  gmail_receiver.py  intent_service.py  language_service.py  pricing_service.py  shipment_service.py  status_service.py
services/ai/: extraction_service.py  intent_service.py  language_service.py  pricing_service.py
services/email/: email_sender.py  (+2 more)
test/: test_read_email.py
utils/: attachment_helper.py  cloudinary_service.py  email_template.py  email_utils.py  gmail_auth.py  gmail_receiver.py  language_helpers.py  message_log_helper.py  poller.py  req_id_generator.py
(+19 files in other folders)
